# IOTA-Voting-System

./: .gitignore  README.md  config.json  package-lock.json  package.json  pubspec.yaml
Backend/: Cargo.toml  identity_output.json
Backend/src/: main.rs
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gov_vote/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
iota_smart_contract/: Cargo.toml  README.md
iota_smart_contract/src/: lib.rs
lib/: api_service.dart  main.dart
lib/screens/: dashboard_screen.dart  feedback_screen.dart  profile_screen.dart  sign_in_screen.dart  sign_up_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: main.rs
test/: widget_test.dart
waspdb/: trusted_peers.json
waspdb/identity/: identity.key
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
